test/classes/subclasses/invalid-qualified-inherit.dyno.good
invalid-qualified-inherit.chpl:5: error: could not find parent class or target interface 'Other.CC' for inheritance expression
